3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Tentative fix for bug #1936178: Trying to remove removed object causes server crash.
 random_maps/treasure.c: update doorlist to process when removing a door.
Nicolas Weeger 2008-05-08

Tentative fix for bug #1956908: bolt wc can overflow.
 server/player.c: cap modifiers so we don't overflow wc.
Nicolas Weeger 2008-05-07

Fix bug #1929084: Wrong artifact stats on forged items. Use 'legal_artifact_combination'
to check that the item matches the artifact.
 common/recipe.c treasure.c
 include/libproto.h
Nicolas Weeger 2008-05-07

Remove autohook inserted in items, and use was_destroyed() to check item's validity.
 plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
 plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.
 plugins/cfpython/cfpython_object.c: remove autohook stuff, use item's count.
 plugins/cfpython/cfpython.c: remove autohook handling.
Nicolas Weeger 2008-03-29

Fix protocol issues regarding sent items: do not send invisible items.
  common/object.c
Andreas Kirschbaum 2008-03-21

Fix protocol issues regarding face caching.
  socket/request.c
Andreas Kirschbaum 2008-03-21

Implement strerror_local() for systems not having strerror_r().
  common/porting.c
Andreas Kirschbaum 2008-03-20

Fix some integer overflows in experience calculations.
  common/exp.c
  common/living.c
  include/libproto.h
  include/sproto.h
  server/attack.c
  server/skill_util.c
Andreas Kirschbaum, 2008-03-08

Remove to eliminate autoconf complaints that configure.ac and configure.in
exist.
  configure.in:
Kevin Bulgrien, 2008-02-06
